--- a/src/app.json
+++ b/src/app.json
@@ -1,6 +1,8 @@
 {
   "pages": [
     "pages/index/main",
+    "pages/goods/main",
+    "pages/order/main",
     "pages/logs/main"  ],
   "window": {
     "backgroundTextStyle": "light",
